# django-ai-first

./: ISSUE_django_model_serialization.md  TICKET-unified-agent.md  TICKET-unified-context-api.md  TICKET_M2M_SERIALIZATION.md  db.sqlite3  manage.py  pyproject.toml  readme.md  requirements.txt
.claude/: settings.local.json
ISSUES/: agent-handler-event-parameter.md
automation/: readme.md
automation/agents/: apps.py  core.py  tests.py
automation/agents/migrations/: 0001_initial.py
automation/events/: apps.py  callbacks.py  definitions.py  models.py  services.py  tests.py
automation/events/management/commands/: process_events.py
automation/events/migrations/: 0001_initial.py  0002_rename_created_at_event_event_created_at_and_more.py  0003_testbooking_testmodelwithoutevents_testorder_and_more.py  0004_delete_testbooking_delete_testmodelwithoutevents_and_more.py  0005_event_namespace.py  0006_alter_event_unique_together.py
automation/queues/: apps.py  scheduling.py  sync_executor.py  tasks.py  tests.py
automation/queues/migrations/: 0001_initial.py  0002_delete_itimmediate_delete_itscheduled.py
automation/workflows/: apps.py  core.py  integration.py  tests.py
automation/workflows/migrations/: 0001_initial.py  0002_workflowrun_triggered_by_event_id_and_more.py
conversations/: context.py  decorators.py  models.py  readme.md  service.py  text_extractor.py  views.py
django_ai/: conf.py
django_ai/automation/: readme.md
django_ai/automation/agents/: __init__.py  apps.py  core.py  models.py  tests.py
django_ai/automation/agents/migrations/: 0001_initial.py  0002_handler_based_agents.py  0003_rename_agents_agen_agent_n_new_idx_agents_agen_agent_n_5c7623_idx_and_more.py  0004_rename_offset_minutes_to_offset.py
django_ai/automation/events/: CLAIMS.md  __init__.py  apps.py  callbacks.py  claims.py  definitions.py  models.py  services.py  signals.py  tests.py
django_ai/automation/events/migrations/: 0001_initial.py  0002_processedeventoffset.py  0003_eventclaim.py  0004_add_watched_values.py  0005_change_watched_values_to_hash.py
django_ai/automation/queues/: apps.py  debounce.py  models.py  q2_executor.py  scheduling.py  sync_executor.py  tasks.py  tests.py
django_ai/automation/queues/migrations/: 0001_initial.py  0002_debouncedtask_event_ids_json.py
django_ai/automation/testing/: __init__.py  readme.md  tests.py  time_machine.py
django_ai/automation/timers/: apps.py  core.py  doc.md  models.py  tests.py
django_ai/automation/timers/migrations/: 0001_initial.py  0002_alter_timedtask_debounce_key.py  0003_cache_driven_audit_log.py
django_ai/automation/workflows/: __init__.py  apps.py  as_action.py  context.py  core.py  metadata.py  models.py  readme.md  statezero_action.py  test_workflow.py  tests.py  types.py
django_ai/automation/workflows/migrations/: 0001_initial.py  0002_alter_workflowrun_status.py  0003_workflowrun_progress_stepexecution.py  0004_workflowrun_completion_display_and_more.py  0005_workflowrun_active_subworkflow_run_id_and_more.py  0006_add_step_display_to_stepexecution.py  0007_alter_stepexecution_status.py
django_ai/automation/workflows/tests/: test_as_action_integration.py  test_context.py  test_core.py  test_display_metadata.py  test_progress_and_history.py  test_statezero_action.py  test_subflows.py  test_types.py
django_ai/conversations/: __init__.py  actions.py  apps.py  base.py  context.py  decorators.py  hooks.py  models.py  readme.md  registry.py  service.py  tasks.py  test_statezero_hooks.py  tests.py  text_extractor.py  urls.py  views.py
django_ai/conversations/migrations/: 0001_initial.py  0002_conversationsession_agent_path.py  0002_remove_conversationmessage_files_delete_file.py  0003_alter_conversationmessage_id.py  0003_conversationmessage_files.py  0004_conversationmessage_tables.py  0005_sessiontoolloadout.py  0006_conversationwidget_display_data.py  0007_conversationwidget_updated_at.py
django_ai/files/: README.md  apps.py  exceptions.py  models.py  parsers.py  signals.py  tasks.py  tests.py  tools.py  utils.py
django_ai/files/migrations/: 0001_initial.py  0002_alter_managedfile_ocr_status_alter_ocroutput_content.py  0003_alter_folder_unique_together.py  0004_alter_managedfile_folder.py  0005_folder_unique_folder_name_per_parent.py
django_ai/tables/: apps.py  models.py  tests.py  tools.py
django_ai/tables/migrations/: 0001_initial.py  0002_alter_table_file.py
django_ai/tools/: TOOLS_USAGE_EXAMPLE.md  __init__.py  apps.py  models.py  registry.py  tests.py
django_ai/tools/migrations/: 0001_initial.py
django_ai/utils/: json.py
django_ai/utils/tests/: test_json.py
example_project/: asgi.py  settings.py  urls.py  wsgi.py
files/2025/12/12/: sample.txt
files/2025/12/19/: folder_doc.txt
files/2026/01/04/: test_Ukl4uLn.txt  test_lgYWecT.txt
saas_ai/: asgi.py  settings.py  urls.py  wsgi.py
tables/0d4da785-c13e-4554-b228-97008caaaa10/: users_v3.parquet
tables/2025/10/13/: employees_v1.parquet  numbers_v1.parquet  table1_v1_0YIA98K.parquet  test_v1.parquet  test_v1_GEyWBE7.parquet  (+4 more)
tables/3dcaf9d0-b0cf-4499-b2b6-0addb509ef11/: users_v2.parquet
tables/adaf118d-0d0d-4e47-ac7a-abfe3ee4891a/: users_v1.parquet
tables/b53bf081-79d1-4472-968e-b43f4e357df3/: values_v1.parquet
tests/: crud.py  models.py  tests.py
tests/migrations/: 0001_initial.py  0002_guest_testbooking_testmodelwithoutevents_testorder_and_more.py  0003_testuuidmodel.py  0004_add_testtriggermodel.py  0005_add_watch_fields_test_model.py  0006_add_templated_event_model.py
(+3 files in other folders)
