[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-first"
version = "0.1.0"
description = "Django framework for building AI-first applications with agents, conversations, and workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Robert Herring", email = "robert@state-zero.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

dependencies = [
    "Django>=5.1,<6.0",
    "pydantic>=2.0,<3.0",
    "django-q2>=1.4.0",
    "cytoolz>=0.12.0",
    "tika>=2.6.0",
    "pusher>=3.3.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]

[project.urls]
"Homepage" = "https://github.com/state-zero/django-ai-first"
"Bug Reports" = "https://github.com/state-zero/django-ai-first/issues"
"Source" = "https://github.com/state-zero/django-ai-first"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = [
    "saas_ai",
    "automation",
    "automation.events",
    "automation.workflows", 
    "automation.queues",
    "automation.agents",
    "conversations",
    "tests",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "saas_ai.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]