[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-first"
version = "0.1.0"
description = "Django framework for building AI-first applications with agents, conversations, and workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Robert Herring", email = "robert@state-zero.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=5.1,<6.0",
    "pydantic>=2.0,<3.0",
    "django-q2>=1.4.0",
    "cytoolz>=0.12.0",
    "tika>=2.6.0",
    "pusher>=3.3.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/state-zero/django-ai-first"
"Documentation" = "https://django-ai-first.readthedocs.io/"
"Bug Reports" = "https://github.com/state-zero/django-ai-first/issues"
"Source" = "https://github.com/state-zero/django-ai-first"

# Only include the main django_ai package (not test infrastructure)
[tool.setuptools]
packages = [
    "django_ai",
    "django_ai.automation", 
    "django_ai.automation.events",
    "django_ai.automation.workflows",
    "django_ai.automation.queues", 
    "django_ai.automation.agents",
    "django_ai.conversations",
]

# Don't include example_project, tests, or saas_ai in the distributed package
[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.txt"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "saas_ai.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3