[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-first"
version = "0.1.47"
description = "Django framework for building AI-first applications with agents, conversations, and workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Robert Herring", email = "robert.herring@resipilot.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/state-zero/django-ai-first"
"Documentation" = "https://django-ai-first.readthedocs.io/"
"Bug Reports" = "https://github.com/state-zero/django-ai-first/issues"
"Source" = "https://github.com/state-zero/django-ai-first"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["django_ai*"]

[tool.setuptools.package-data]
"django_ai.automation.events" = ["migrations/*.py"]
"django_ai.automation.workflows" = ["migrations/*.py"]
"django_ai.automation.queues" = ["migrations/*.py"]
"django_ai.automation.agents" = ["migrations/*.py"]
"django_ai.conversations" = ["migrations/*.py"]
"django_ai.files" = ["migrations/*.py"]
"*" = ["*.html", "*.css", "*.js", "*.txt"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3